<resources xmlns:tools="http://schemas.android.com/tools">
    tools:ignore="ExtraTranslation"

    <string name="app_name">Base</string>
    <string name="load">加载中</string>
    <string name="share_to">分享到</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="wechat">微信</string>
    <string name="wechat_moments">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>
    <string name="copy">复制成功</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_fail">分享失败</string>
    <string name="share_error">未安装客户端或者客户端版本太低</string>
    <string name="login_success">登陆成功</string>
    <string name="login_cancel">登陆取消</string>
    <string name="login_fail">登陆失败</string>
    <string name="login_error">未安装客户端或者客户端版本太低</string>
    <string name="permission_title">权限申请</string>
    <string name="permission_text">为了不影响您的正常使用，请赋予应用必要的权限！</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

</resources>
